Minor refactory and some more documentation